Optimize url to photos and wallposts.